# fonder_thesis-2016

./: LICENSE  README.md
MSCKF/: CMakeLists.txt  MSCKF.cpp  MSCKF.hpp  README.txt  dynamicVector.hpp  dynamicVectorContainer.hpp  dynamicVectorReference.hpp  imuState.cpp  imuState.hpp  main.cpp  utils.cpp  utils.hpp
Syn_data_generator/: extracr_spheres.py  gamelogic_module.py  generate_synthetic.py  syn_data_generator.blend
